--- a/AceGWT/pom.xml
+++ b/AceGWT/pom.xml
@@ -1,21 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-<!--
-	<parent>
-		<groupId>org.genmymodel.gmmf</groupId>
-		<artifactId>gmmf-parent</artifactId>
-		<version>0.38-SNAPSHOT</version>
-	</parent>
--->
-
 	<groupId>AceGWT</groupId>
 	<artifactId>AceGWT</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<github.global.server>github</github.global.server>
 		<gwt.version>2.7.0</gwt.version>
 	</properties>
 
@@ -41,7 +33,39 @@
 <!-- 				</configuration> -->
 <!-- 			</plugin> -->
 <!-- 		</plugins> -->
+		<plugins>
+			<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.2</version>
+					<configuration>
+						<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.github.github</groupId>
+					<artifactId>site-maven-plugin</artifactId>
+					<version>0.12</version>
+					<configuration>
+							<message>Maven artifacts for ${project.artifactId} ${project.version}</message>
+							<noJekyll>true</noJekyll>
+							<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+							<branch>refs/heads/mvn-repo</branch>
+							<includes><include>**/*</include></includes>
+							<repositoryName>AceGWT</repositoryName>
+							<repositoryOwner>aranega</repositoryOwner>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>site</goal>
+							</goals>
+							<phase>deploy</phase>
+						</execution>
+					</executions>
+			</plugin>
+		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -49,4 +73,12 @@
 			<version>${gwt.version}</version>
 		</dependency>
 	</dependencies>
+
+	<distributionManagement>
+    <repository>
+        <id>internal.repo</id>
+        <name>Temporary Staging Repository</name>
+        <url>file://${project.build.directory}/mvn-repo</url>
+    </repository>
+	</distributionManagement>
 </project>
