--- a/AceGWT/pom.xml
+++ b/AceGWT/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>AceGWT</groupId>
 	<artifactId>AceGWT</artifactId>
-	<version>1.0.8</version>
+	<version>1.0.9</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -72,6 +72,7 @@
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
 			<version>${gwt.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
